<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_general"
        android:key="pref_key_general">

        <ListPreference
            android:title="@string/pref_title_protocol"
            android:key="pref_key_protocol"
            android:dialogTitle="@string/pref_title_protocol"
            android:entries="@array/pref_entries_protocol"
            android:entryValues="@array/pref_entries_protocol"
            android:defaultValue="@string/pref_default_protocol"/>

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="10.0.0.3"
            android:inputType="textUri"
            android:key="pref_key_server_address"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_server_address" />

        <EditTextPreference
            android:defaultValue="22"
            android:inputType="number"
            android:key="pref_key_port"
            android:singleLine="true"
            android:title="@string/pref_title_port" />

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="sync"
            android:inputType="text"
            android:key="pref_key_username"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_username" />

        <Preference
            android:title="@string/pref_title_verify_host"
            android:key="pref_key_verify_host" />

        <Preference
            android:title="@string/pref_title_clear_hosts"
            android:key="pref_key_clear_hosts" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_sync_backup"
        android:key="pref_key_sync_backup">

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="-vrlt --no-perms"
            android:inputType="text"
            android:key="pref_key_options"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_options" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="text"
            android:key="pref_key_private_key"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:title="@string/pref_title_private_key" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="pref_key_rsync_password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_rsync_password" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="pref_key_ssh_password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ssh_password" />

        <EditTextPreference
            android:defaultValue="8"
            android:inputType="number"
            android:key="pref_key_frequency"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_frequency" />

        <CheckBoxPreference
            android:key="pref_key_wifi_only"
            android:title="@string/pref_title_wifi_only"
            android:summaryOff="@string/pref_sum_no_wifi_only"
            android:summaryOn="@string/pref_sum_wifi_only" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="text"
            android:key="pref_key_wifi_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_wifi_name" />

        <CheckBoxPreference
            android:key="pref_key_as_root"
            android:title="@string/pref_title_as_root"
            android:summaryOff="@string/pref_sum_as_root"
            android:summaryOn="@string/pref_sum_as_root" />

    </PreferenceCategory>

</PreferenceScreen>
